<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/imageSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:iss_auto_cycle="true"
        app:iss_delay="0"
        app:iss_corner_radius="5"
        app:iss_selected_dot="@drawable/default_selected_dot"
        app:iss_unselected_dot="@drawable/default_unselected_dot"
        app:iss_period="2000"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginVertical="5dp"
        android:gravity="center_horizontal"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSlider"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"/>

    <LinearLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="16dp"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/white">
            <androidx.cardview.widget.CardView
                android:id="@+id/menu1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                android:background="@color/white"
                android:clickable="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    tools:ignore="UseCompoundDrawables"
                    android:background="@color/white">
                    <ImageView
                        android:id="@+id/icon1"
                        android:layout_width="120dp"
                        android:layout_height="85dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/makanan_icon"
                        android:background="@color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/menu1"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:lines="2"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:background="@color/white"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/menu2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                android:background="@color/white"
                android:clickable="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    tools:ignore="UseCompoundDrawables"
                    android:background="@color/white">
                    <ImageView
                        android:id="@+id/icon2"
                        android:layout_width="95dp"
                        android:layout_height="95dp"
                        android:src="@drawable/rumah_icon"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="2"
                        android:text="@string/menu2"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"/>
                </LinearLayout>
        </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/white">
            <androidx.cardview.widget.CardView
                android:id="@+id/menu3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                android:background="@color/white"
                android:clickable="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    tools:ignore="UseCompoundDrawables"
                    android:background="@color/white">
                    <ImageView
                        android:id="@+id/icon3"
                        android:layout_width="95dp"
                        android:layout_height="95dp"
                        android:src="@drawable/anak_icon"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/menu3"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:lines="2"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:background="@color/white"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/menu4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                android:background="@color/white"
                android:clickable="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    tools:ignore="UseCompoundDrawables"
                    android:background="@color/white">
                    <ImageView
                        android:id="@+id/icon4"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:src="@drawable/kecantikan_icon"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="2"
                        android:text="@string/menu4"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:paddingTop="3dp"
                        android:background="@color/white"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>